# automerge-ex

./: .credo.exs  .editorconfig  .gitignore  LICENSE  README.md  mix.exs
.github/workflows/: ci.yml
automerge_backend_nif/: .gitignore  README.md  mix.exs
automerge_backend_nif/lib/automerge/backend/: nif.ex
automerge_backend_nif/native/automerge_backend_nif/: .gitignore  Cargo.toml  README.md
automerge_backend_nif/native/automerge_backend_nif/src/: lib.rs
automerge_backend_nif/test/automerge/backend/: nif_test.exs
lib/: automerge.ex
lib/automerge/: frontend.ex  history.ex  list.ex  map.ex  map_splice.ex  text.ex
lib/automerge/extentions/: enumerable.ex  inspect.ex  to_string.ex
lib/automerge/frontend/: apply_patch.ex  context.ex  document.ex
test/automerge/: access_text.exs  automerge_test.exs  frontend_test.exs  list_test.exs  map_test.exs  text_test.exs
test/automerge/frontend/: context_test.exs  document_text.exs
test/support/: helper_case.ex
