[package]
name = "automerge_backend_nif"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "automerge_backend_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.21.0"
serde_rustler = "0.1.0"
lazy_static = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.61"
serde_bytes = "0.11.5"
serde-transcode = "1.1.0"
automerge-backend = { git = "https://github.com/automerge/automerge-rs", branch = "main" }
automerge-frontend = { git = "https://github.com/automerge/automerge-rs", branch = "main" }
automerge-protocol = { git = "https://github.com/automerge/automerge-rs", branch = "main" }
